Junit5 all over, ekskludert junit 4.  (#751)
* 1st try

* static block?

* que

* que

* fix test

* med trans

* med trans

* til init block

* til init block

* fjernet ubrukt

* test scope

* test scope

* test scope

* renamed

* renamed

* exclude junit4

* exclude junit4

* split specific and general extension

* split specific and general extension

* bump felles