@@ -1,24 +1,25 @@
 package no.nav.foreldrepenger.mottak.behandlendeenhet;
 
+import static no.nav.foreldrepenger.fordel.kodeverdi.BehandlingTema.FORELDREPENGER;
+import static no.nav.foreldrepenger.fordel.kodeverdi.Tema.FORELDRE_OG_SVANGERSKAPSPENGER;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import no.nav.foreldrepenger.fordel.kodeverdi.BehandlingTema;
-import no.nav.foreldrepenger.fordel.kodeverdi.Tema;
 import no.nav.tjeneste.virksomhet.person.v3.binding.HentGeografiskTilknytningPersonIkkeFunnet;
 import no.nav.tjeneste.virksomhet.person.v3.binding.HentGeografiskTilknytningSikkerhetsbegrensing;
 import no.nav.tjeneste.virksomhet.person.v3.informasjon.Diskresjonskoder;
-import no.nav.tjeneste.virksomhet.person.v3.informasjon.GeografiskTilknytning;
 import no.nav.tjeneste.virksomhet.person.v3.informasjon.Kommune;
 import no.nav.tjeneste.virksomhet.person.v3.meldinger.HentGeografiskTilknytningResponse;
 import no.nav.vedtak.exception.ManglerTilgangException;
@@ -27,34 +28,33 @@ import no.nav.vedtak.felles.integrasjon.arbeidsfordeling.rest.ArbeidsfordelingRe
 import no.nav.vedtak.felles.integrasjon.arbeidsfordeling.rest.ArbeidsfordelingRestKlient;
 import no.nav.vedtak.felles.integrasjon.person.PersonConsumer;
 
+@ExtendWith(MockitoExtension.class)
 public class EnhetsTjenesteTest {
-
     private static final String FNR = "99999999999";
     private static final ArbeidsfordelingResponse ENHET = new ArbeidsfordelingResponse("4801", "Enhet", "Aktiv", "FPY");
     private static final ArbeidsfordelingResponse FORDELING_ENHET = new ArbeidsfordelingResponse("4825", "Oslo", "Aktiv", "FPY");
     public static final String GEOGRAFISK_TILKNYTNING = "test";
     public static final String DISKRESJONSKODE = "diskresjonskode";
-    private EnhetsTjeneste enhetsTjeneste; // objektet vi tester
+    private EnhetsTjeneste enhetsTjeneste;
+    @Mock
     private ArbeidsfordelingRestKlient arbeidsfordelingTjeneste;
+    @Mock
     private PersonConsumer personConsumer;
 
     @BeforeEach
     public void setup() {
-        personConsumer = mock(PersonConsumer.class);
-        arbeidsfordelingTjeneste = mock(ArbeidsfordelingRestKlient.class);
-        when(arbeidsfordelingTjeneste.hentAlleAktiveEnheter(any())).thenReturn(Collections.singletonList(FORDELING_ENHET));
-
+        when(arbeidsfordelingTjeneste.hentAlleAktiveEnheter(any())).thenReturn(List.of(FORDELING_ENHET));
         enhetsTjeneste = new EnhetsTjeneste(personConsumer, arbeidsfordelingTjeneste);
     }
 
     @Test
-    public void skal_returnere_enhetid() throws HentGeografiskTilknytningPersonIkkeFunnet, HentGeografiskTilknytningSikkerhetsbegrensing {
+    public void skal_returnere_enhetid() throws Exception {
 
-        HentGeografiskTilknytningResponse response = new HentGeografiskTilknytningResponse();
+        var response = new HentGeografiskTilknytningResponse();
         when(personConsumer.hentGeografiskTilknytning(any())).thenReturn(response);
-        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(Collections.singletonList(ENHET));
+        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(List.of(ENHET));
 
-        String enhetId = enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+        String enhetId = enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                 Optional.of(FNR));
 
         assertThat(enhetId).isNotNull();
@@ -62,17 +62,16 @@ public class EnhetsTjenesteTest {
     }
 
     @Test
-    public void skal_returnere_enhetid_og_kalle_arbeidsfordelingstjeneste_med_geografisk_tilknytning()
-            throws HentGeografiskTilknytningPersonIkkeFunnet, HentGeografiskTilknytningSikkerhetsbegrensing {
+    public void skal_returnere_enhetid_og_kalle_arbeidsfordelingstjeneste_med_geografisk_tilknytning() throws Exception {
 
-        HentGeografiskTilknytningResponse response = new HentGeografiskTilknytningResponse();
-        GeografiskTilknytning geografiskTilknytning = new Kommune();
+        var response = new HentGeografiskTilknytningResponse();
+        var geografiskTilknytning = new Kommune();
         geografiskTilknytning.setGeografiskTilknytning(GEOGRAFISK_TILKNYTNING);
         response.setGeografiskTilknytning(geografiskTilknytning);
         when(personConsumer.hentGeografiskTilknytning(any())).thenReturn(response);
-        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(Collections.singletonList(ENHET));
+        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(List.of(ENHET));
 
-        String enhetId = enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+        String enhetId = enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                 Optional.of(FNR));
 
         assertThat(enhetId).isNotNull();
@@ -80,17 +79,16 @@ public class EnhetsTjenesteTest {
     }
 
     @Test
-    public void skal_returnere_enhetid_og_kalle_arbeidsfordelingstjeneste_med_diskresjonskode() throws HentGeografiskTilknytningPersonIkkeFunnet,
-            HentGeografiskTilknytningSikkerhetsbegrensing {
+    public void skal_returnere_enhetid_og_kalle_arbeidsfordelingstjeneste_med_diskresjonskode() throws Exception {
 
-        HentGeografiskTilknytningResponse response = new HentGeografiskTilknytningResponse();
-        Diskresjonskoder diskresjonskoder = new Diskresjonskoder();
+        var response = new HentGeografiskTilknytningResponse();
+        var diskresjonskoder = new Diskresjonskoder();
         diskresjonskoder.setValue(DISKRESJONSKODE);
         response.setDiskresjonskode(diskresjonskoder);
         when(personConsumer.hentGeografiskTilknytning(any())).thenReturn(response);
-        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(Collections.singletonList(ENHET));
+        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(List.of(ENHET));
 
-        String enhetId = enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+        String enhetId = enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                 Optional.of(FNR));
 
         assertThat(enhetId).isNotNull();
@@ -98,16 +96,15 @@ public class EnhetsTjenesteTest {
     }
 
     @Test
-    public void skal_returnere_enhetid_journalføring() throws HentGeografiskTilknytningPersonIkkeFunnet,
-            HentGeografiskTilknytningSikkerhetsbegrensing {
-        HentGeografiskTilknytningResponse response = new HentGeografiskTilknytningResponse();
-        Diskresjonskoder diskresjonskoder = new Diskresjonskoder();
+    public void skal_returnere_enhetid_journalføring() throws Exception {
+        var response = new HentGeografiskTilknytningResponse();
+        var diskresjonskoder = new Diskresjonskoder();
         diskresjonskoder.setValue(DISKRESJONSKODE);
         response.setDiskresjonskode(diskresjonskoder);
         when(personConsumer.hentGeografiskTilknytning(any())).thenReturn(response);
-        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(Collections.singletonList(ENHET));
+        when(arbeidsfordelingTjeneste.finnEnhet(any())).thenReturn(List.of(ENHET));
 
-        String enhetId = enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+        String enhetId = enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                 Optional.of(FNR));
 
         assertThat(enhetId).isNotNull();
@@ -117,20 +114,19 @@ public class EnhetsTjenesteTest {
     @Test
     public void skal_returnere_enhetid_journalføring_uten_fnr() {
 
-        String enhetId = enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+        String enhetId = enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                 Optional.empty());
-
         assertThat(enhetId).isNotNull();
         assertThat(enhetId).isEqualTo(FORDELING_ENHET.getEnhetNr());
     }
 
     @Test
-    public void skal_kaste_sikkerhetsbegrening() throws HentGeografiskTilknytningPersonIkkeFunnet, HentGeografiskTilknytningSikkerhetsbegrensing {
+    public void skal_kaste_sikkerhetsbegrening() throws Exception {
         when(personConsumer.hentGeografiskTilknytning(any())).thenThrow(new HentGeografiskTilknytningSikkerhetsbegrensing(null, null));
         var e = assertThrows(ManglerTilgangException.class,
-                () -> enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+                () -> enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                         Optional.of(FNR)));
-        assertTrue(e.getMessage().contains("FP-509290"));
+        assertThat(e.getMessage().contains("FP-509290")).isTrue();
 
     }
 
@@ -138,7 +134,7 @@ public class EnhetsTjenesteTest {
     public void skal_kaste_person_ikke_funnet() throws HentGeografiskTilknytningPersonIkkeFunnet, HentGeografiskTilknytningSikkerhetsbegrensing {
         when(personConsumer.hentGeografiskTilknytning(any())).thenThrow(new HentGeografiskTilknytningPersonIkkeFunnet(null, null));
         var e = assertThrows(TekniskException.class,
-                () -> enhetsTjeneste.hentFordelingEnhetId(Tema.FORELDRE_OG_SVANGERSKAPSPENGER, BehandlingTema.FORELDREPENGER, Optional.empty(),
+                () -> enhetsTjeneste.hentFordelingEnhetId(FORELDRE_OG_SVANGERSKAPSPENGER, FORELDREPENGER, Optional.empty(),
                         Optional.of(FNR)));
         assertTrue(e.getMessage().contains("FP-070668"));
 
